--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Sanjivani Notes</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width initial-scale=1">
+	<meta name="description" content="Sanjivani Engineering College, Kopargaon. academics Admissions Faculty">
 	<link rel="stylesheet" href="bootstrap-4.4.1-dist\css\bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<link href="https://fonts.googleapis.com/css2?family=Rubik&display=swap" rel="stylesheet">
